syntax = "proto3";

package org.federation;

import "grpc/federation/federation.proto";

option go_package = "example/federation;federation";

option (grpc.federation.file)= {
  import: ["post/post.proto"]
};

service FederationService {
  option (grpc.federation.service) = {};
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {};
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  option (grpc.federation.message) = {
    def {
      name: "post"
      message {
        name: "Post"
        args { name: "id", by: "$.id" }
      }
    }
  };
  org.federation.Post post = 1 [(grpc.federation.field).by = "post"];
}

message Post {
  option (grpc.federation.message) = {
    def [
      {
        name: "res"
        call {
          method: "post.PostService/GetPost"
          request { field: "id" by: "$.id" }
          error {
            def { name: "id" by: "$.id" }
            if: "error.precondition_failures[?0].violations[?0].subject == optional.of('bar') && error.localized_messages[?0].message == optional.of('hello') && error.custom_messages[?0].id == optional.of('xxx')"
            code: FAILED_PRECONDITION
            message: "'this is custom error message'"
            details {
              def { name: "localized_msg" message { name: "LocalizedMessage" args { name: "value" by: "id" } } }
              message { name: "CustomMessage" args { name: "error_info" by: "error" } }
              by: "post.Post{id: 'foo'}"
              precondition_failure {
                violations {
                  type: "'some-type'"
                  subject: "'some-subject'"
                  description: "'some-description'"
                }
              }
              localized_message {
                locale: "en-US"
                message: "localized_msg.value"
              }
            }
          }
          error {
            log_level: WARN
            if: "error.code == google.rpc.Code.INVALID_ARGUMENT"
            code: INVALID_ARGUMENT
            message: "'this is custom log level'"
          }
          error {
            if: "error.code == google.rpc.Code.UNIMPLEMENTED"
            ignore_and_response: "post.GetPostResponse{post: post.Post{id: 'anonymous'}}"
          }
          error {
            ignore: true
          }
          error {
            code: CANCELLED
          }
        }
      },
      { name: "post" by: "res.post" autobind: true }
    ]
  };
  string id = 1;
  string title = 2;
}

message LocalizedMessage {
  string value = 1 [(grpc.federation.field).by = "'localized value:' + $.value"];
}

message CustomMessage {
  string msg = 1 [(grpc.federation.field).by = "'custom error message:' + $.error_info.message"];
}